fix: 강좌 조회 최적화